--- a/P3-style-index.scss
+++ b/P3-style-index.scss
@@ -10,8 +10,7 @@
     background: $tertiary-color;
     background: linear-gradient(to right, $tertiary-color 10%, rgba(153,226,208, 0) 42%);
     position: relative;
-    animation: load1 1.4s infinite linear;
-    animation: load2 1s 2s;
+    animation: load1 1.4s linear;
     transform: translateZ(0);
     &:before
     {
@@ -45,33 +44,45 @@
       transform: rotate(0deg);
     }
     100% {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
 
 @keyframes load2
 {
     0%{
-        opacity: 1;
+        visibility: visible;
+    }
+    99%{
+        visibility: visible;
     }
     100%{
-        opacity: 0;
+        visibility: hidden;
     }
+}
+
+.loadercache
+{
+    animation: load2 2s 1s;
 }
 
 @keyframes loadacceuil 
 {
     0%{
-        opacity: 0;
+        visibility: hidden;
+    }
+    99%{
+        visibility: hidden;
     }
     100%{
-        opacity: 1;
+        visibility: visible;
     }
 }
 
 .acceuil
 {
-    animation: loadacceuil 1s 2s;
+    visibility: hidden;
+    animation: loadacceuil 3s 2s;
 }
 
 .hlogo
@@ -155,6 +166,12 @@
         padding-left: 0;
         margin-right: 0;
     }
+    .fas
+    {
+        color: $darkergrey-color;
+        position: relative;
+        right: 5px;
+    }
 }
 
 .Fbox
@@ -168,18 +185,10 @@
     .F1
     {
         @include F0();
-        .fas
-        {
-            color: $darkergrey-color;
-        }
     }
     .F2
     {
         @include F0();
-        .fas
-        {
-            color: $darkergrey-color;
-        }
     }
     .F3
     {
@@ -194,12 +203,15 @@
 .num
 {
 	background-color: $primary-color;
+    font-size: larger;
 	color: white;
-	width: 20px;
-	height: 20px;
+	width: 25px;
+    height: 25px;
 	padding: 0.5%;
 	border-radius: 100%;
 	text-align: center;
+    position: relative;
+    right: 10px;
 }
 
 @mixin restoindex
@@ -215,10 +227,13 @@
     @media (max-width: 799px)
     {
         width: auto;
+        display: flex;
+        flex-direction: column;
     }
     img
     {
         width: 100%;
+        height: 400px;
         object-fit: cover;
         border-radius: 20px 20px 0px 0px;
         z-index: 1;
@@ -260,9 +275,17 @@
                 color: darken($color: $tertiary-color, $amount: 40%);
                 padding: 10px;
                 z-index: 2;
-                position: absolute;
-                top: 12px;
-                right: 12px;
+                position: relative;
+                bottom: 390px;
+                left: 85%;
+                @media (max-width: 1300px)
+                {
+                    left: 78%;
+                }
+                @media (max-width: 749px)
+                {
+                    left: 70%;
+                }                                    
             }
         }
     }
