--- a/P3-style-index.css
+++ b/P3-style-index.css
@@ -128,8 +128,8 @@ footer .flien a .fas {
   background: #99E2D0;
   background: linear-gradient(to right, #99E2D0 10%, rgba(153, 226, 208, 0) 42%);
   position: relative;
-  -webkit-animation: load1 1.4s linear;
-          animation: load1 1.4s linear;
+  -webkit-animation: load1 2s linear;
+          animation: load1 2s linear;
   transform: translateZ(0);
 }
 .loader:before {
@@ -272,6 +272,12 @@ footer .flien a .fas {
   background: linear-gradient(0.48turn, #FF79DA, #9256dc);
   border-radius: 50px 50px 50px 50px;
   box-shadow: 0px 4px 7px -3px #6b6b6b;
+}
+.bexploration a:hover {
+  transform: scale(1.05);
+  transition-duration: 0.5s;
+  box-shadow: 0px 0px 10px 2px #6b6b6b;
+  opacity: 0.8;
 }
 
 .fonctionnement {
