--- a/P3-style-main.scss
+++ b/P3-style-main.scss
@@ -31,6 +31,14 @@ $footer-color: #353535;
     box-shadow: 0px 4px 7px -3px $darkergrey-color;    
 }
 
+@mixin btn-hover 
+{
+    transform: scale(1.05);
+    transition-duration: 0.5s;
+    box-shadow: 0px 0px 10px 2px $darkergrey-color;
+    opacity: 0.8;
+}
+
 body
 {
     font-family: 'roboto', 'Times New Roman', Times, serif;
