--- a/P3-style-page.scss
+++ b/P3-style-page.scss
@@ -137,10 +137,7 @@
     top: 50px;
     :hover
     {
-        transform: scale(1.05);
-        transition-duration: 0.5s;
-        box-shadow: 0px 0px 10px 2px $darkergrey-color;
-        opacity: 0.8;
+        @include btn-hover();
     }
     a
     {
@@ -149,9 +146,3 @@
     }
 }
 
-@mixin btn-hover 
-{
-    transform: scale(1.1);
-    transition-duration: 0.5s;
-    box-shadow: 0px 0px 10px 2px $darkergrey-color;
-}
