--- a/P3-style-main.scss
+++ b/P3-style-main.scss
@@ -35,8 +35,8 @@ $footer-color: #353535;
 {
     transform: scale(1.05);
     transition-duration: 0.5s;
-    box-shadow: 0px 0px 10px 2px $darkergrey-color;
-    opacity: 0.8;
+    box-shadow: 0px 7px 7px -1px $darkergrey-color;
+    opacity: 0.9;
 }
 
 body
@@ -79,12 +79,28 @@ h4
 {
     font-size: 1.5em;
     margin: 0;
+    &::after
+    {
+        content: '';
+        background: $tertiary-color;
+        height: 2px;
+        width: 50px;
+        display: flex;
+    }
+    @media (max-width: 799px)
+    {
+        font-size: 1.2em;
+    }
 }
 
 h5
 {
     font-size: 1.25em;
     margin: 0;
+    @media (max-width: 799px)
+    {
+        font-size: 1.1em;
+    }
 }
 
 .hlogo
@@ -111,6 +127,11 @@ h5
         margin: auto;
         position: relative;
         left: -15px;
+        @media (max-width: 799px)
+        {
+            width: 200px;
+            height: auto;
+        }
     }
 }
 
