--- a/P3-style-index.css
+++ b/P3-style-index.css
@@ -40,10 +40,27 @@ h4 {
   font-size: 1.5em;
   margin: 0;
 }
+h4::after {
+  content: "";
+  background: #99E2D0;
+  height: 2px;
+  width: 50px;
+  display: flex;
+}
+@media (max-width: 799px) {
+  h4 {
+    font-size: 1.2em;
+  }
+}
 
 h5 {
   font-size: 1.25em;
   margin: 0;
+}
+@media (max-width: 799px) {
+  h5 {
+    font-size: 1.1em;
+  }
 }
 
 .hlogo {
@@ -68,6 +85,12 @@ h5 {
   margin: auto;
   position: relative;
   left: -15px;
+}
+@media (max-width: 799px) {
+  .hlogo img {
+    width: 200px;
+    height: auto;
+  }
 }
 
 .fa-heart:hover {
@@ -276,8 +299,8 @@ footer .flien a .fas {
 .bexploration a:hover {
   transform: scale(1.05);
   transition-duration: 0.5s;
-  box-shadow: 0px 0px 10px 2px #6b6b6b;
-  opacity: 0.8;
+  box-shadow: 0px 7px 7px -1px #6b6b6b;
+  opacity: 0.9;
 }
 
 .fonctionnement {
