--- a/P3-style-page.css
+++ b/P3-style-page.css
@@ -88,7 +88,7 @@ h5 {
 }
 @media (max-width: 799px) {
   .hlogo img {
-    width: 250px;
+    width: 200px;
     height: auto;
   }
 }
@@ -171,8 +171,53 @@ footer .flien a .fas {
   width: 20%;
 }
 
-.entrees, .desserts, .plats {
+@-webkit-keyframes menuapparition {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(25px);
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+@keyframes menuapparition {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(25px);
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+.entrees {
   padding: 2%;
+  -webkit-animation: menuapparition 1500ms both;
+          animation: menuapparition 1500ms both;
+  -webkit-animation-delay: 0ms;
+          animation-delay: 0ms;
+}
+
+.plats {
+  padding: 2%;
+  -webkit-animation: menuapparition 1500ms both;
+          animation: menuapparition 1500ms both;
+  -webkit-animation-delay: 500ms;
+          animation-delay: 500ms;
+}
+
+.desserts {
+  padding: 2%;
+  -webkit-animation: menuapparition 1500ms both;
+          animation: menuapparition 1500ms both;
+  -webkit-animation-delay: 1000ms;
+          animation-delay: 1000ms;
 }
 
 @-webkit-keyframes check {
